# SquadOVClient

./: .gitattributes  .gitignore  CMakeLists.txt  cloc.sh  vetur.config.js
client_service/advanced_crash_dump_enabler/: CMakeLists.txt
client_service/advanced_crash_dump_enabler/src/: advanced_crash_dump_enabler.exe.manifest  main.cpp
client_service/csgo_demo_retriever/: CMakeLists.txt
client_service/csgo_demo_retriever/src/: main.cpp
client_service/game_event_watcher/: CMakeLists.txt
client_service/game_event_watcher/game_event_watcher/aimlab/: aimlab_log_watcher.cpp  aimlab_log_watcher.h
client_service/game_event_watcher/game_event_watcher/csgo/: csgo_gsi_listener.cpp  csgo_gsi_listener.h  csgo_gsi_packet.cpp  csgo_gsi_packet.h  csgo_gsi_state_manager.cpp  csgo_gsi_state_manager.h  csgo_log_watcher.cpp  csgo_log_watcher.h
client_service/game_event_watcher/game_event_watcher/ff14/: ff14_log_watcher.cpp  ff14_log_watcher.h
client_service/game_event_watcher/game_event_watcher/hearthstone/: hearthstone_log_config.cpp  hearthstone_log_config.h  hearthstone_log_watcher.cpp  hearthstone_log_watcher.h  hearthstone_power_log_parser.cpp  hearthstone_power_log_parser.h  hearthstone_raw_log.h
client_service/game_event_watcher/game_event_watcher/league/: league_log_watcher.cpp  league_log_watcher.h
client_service/game_event_watcher/game_event_watcher/logs/: base_log_watcher.h  log_watcher.cpp  log_watcher.h
client_service/game_event_watcher/game_event_watcher/valorant/: valorant_log_watcher.cpp  valorant_log_watcher.h
client_service/game_event_watcher/game_event_watcher/wow/: wow_log_watcher.cpp  wow_log_watcher.h
client_service/process_watcher/: CMakeLists.txt
client_service/process_watcher/process_watcher/: handler.h  watcher.cpp  watcher.h
client_service/process_watcher/process_watcher/games/: act_process_detector.cpp  act_process_detector.h  aimlab_process_detector.cpp  aimlab_process_detector.h  csgo_process_detector.cpp  csgo_process_detector.h  ff14_process_detector.cpp  ff14_process_detector.h  game_process_detector.cpp  game_process_detector.h  hearthstone_process_detector.cpp  hearthstone_process_detector.h  league_process_detector.cpp  league_process_detector.h  valorant_process_detector.cpp  valorant_process_detector.h  wow_process_detector.cpp  wow_process_detector.h
client_service/process_watcher/process_watcher/memory/: module_memory_mapper.cpp  module_memory_mapper.h  mono_memory_mapper.cpp  mono_memory_mapper.h  pe_mapper.cpp  pe_mapper.h
client_service/process_watcher/process_watcher/process/: process.cpp  process.h
client_service/service/: CMakeLists.txt
client_service/service/libwgc/: wgc.cpp  wgc.h
client_service/service/src/: audio_sanity_checker.cpp  audio_sanity_checker.exe.manifest  automated_game_setup.cpp  combat_log_upload_tester.cpp  d3d11_image_tester.cpp  manual_clipper.cpp  service.cpp  speed_check.cpp  vod_record_tester.cpp  vod_record_tester.exe.manifest  wow_finder.cpp
client_service/service/src/aimlab/: aimlab_db_interface.cpp  aimlab_db_interface.h  aimlab_process_handler.cpp  aimlab_process_handler.h
client_service/service/src/api/: aws_api.cpp  aws_api.h  combat_log_client.cpp  combat_log_client.h  kafka_api.cpp  kafka_api.h  league_ingame_api.cpp  league_ingame_api.h  local_api.cpp  local_api.h  squadov_api.cpp  squadov_api.h
client_service/service/src/csgo/: csgo_process_handler.cpp  csgo_process_handler.h
client_service/service/src/database/: api.cpp  api.h
client_service/service/src/ff14/: ff14_process_handler.cpp  ff14_process_handler.h
client_service/service/src/hardware/: cpu.cpp  cpu.h  display.cpp  display.h  hardware.cpp  hardware.h  os.cpp  os.h
client_service/service/src/hearthstone/: hearthstone_process_handler.cpp  hearthstone_process_handler.h
client_service/service/src/http/: http_client.cpp  http_client.h
client_service/service/src/league/: league_process_handler.cpp  league_process_handler.h
client_service/service/src/local/: local_data.cpp  local_data.h
client_service/service/src/recorder/: default_flags.cpp  default_flags.h  game_preview_stream.cpp  game_preview_stream.h  game_recorder.cpp  game_recorder.h  process_record_interface.h  win32_gdi_recorder.cpp  win32_gdi_recorder.h
client_service/service/src/renderer/: d3d11_context.cpp  d3d11_context.h  d3d11_model.cpp  d3d11_model.h  d3d11_overlay_component.cpp  d3d11_overlay_component.h  d3d11_overlay_layer.cpp  d3d11_overlay_layer.h  d3d11_overlay_renderer.cpp  d3d11_overlay_renderer.h  d3d11_renderer.cpp  d3d11_renderer.h  d3d11_shader.cpp  d3d11_shader.h  d3d11_texture.cpp  d3d11_texture.h  d3d11_video_processor.cpp  (+1 more)
client_service/shared/: CMakeLists.txt
client_service/shared/shared/: color.h  constants.h  env.cpp  env.h  games.cpp  games.h  io.h  json.h  math.h  process.cpp  process.h  time.cpp  time.h  timer.cpp  timer.h  url.cpp  url.h  uuid.cpp  uuid.h  version.cpp  version.h
client_service/steamworks_interface/: CMakeLists.txt
client_service/steamworks_interface/steamworks_interface/: client.cpp  client.h  gc_delegate.h
client_ui/: index.js  (+15 more)
tests/: CMakeLists.txt
tests/game_event_watcher/: CMakeLists.txt
tests/game_event_watcher/wow/: CMakeLists.txt  wow_combat_log_parser_test.cpp
tests/process_watcher/process/: CMakeLists.txt  process_running_state_test.cpp
tests/shared/: CMakeLists.txt
tests/shared/base64/: CMakeLists.txt  decode_test.cpp  encode_test.cpp
tests/shared/valve/: CMakeLists.txt  vdf_file_test.cpp
tools/: CMakeLists.txt
tools/combat_log_upload_tester/: CMakeLists.txt  main.cpp
tools/dev_sandbox/: CMakeLists.txt
tools/dev_sandbox/mike/: CMakeLists.txt  main.cpp
tools/file_watch_tester/: CMakeLists.txt  main.cpp
tools/hearthstone_dumper/: CMakeLists.txt  main.cpp
tools/hearthstone_log_parser/: CMakeLists.txt  main.cpp
tools/lol_log_watcher/: CMakeLists.txt  main.cpp
tools/mono_dumper/: CMakeLists.txt  main.cpp
tools/pe_dumper/: CMakeLists.txt  main.cpp
tools/shmem_csgo_demo_retriever/: CMakeLists.txt  main.cpp
tools/wow_log_watcher/: CMakeLists.txt  main.cpp
(+1303 files in other folders)
