add_subdirectory(pe_dumper)
add_subdirectory(mono_dumper)
add_subdirectory(hearthstone_dumper)
add_subdirectory(hearthstone_log_parser)
add_subdirectory(file_watch_tester)
add_subdirectory(lol_log_watcher)
add_subdirectory(shmem_csgo_demo_retriever)
add_subdirectory(wow_log_watcher)
add_subdirectory(dev_sandbox)
add_subdirectory(combat_log_upload_tester)